# video-extract

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  docker-compose.yml
scripts/: fetch_model.sh
src/: main.rs
